--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 :root {
   --background: #ffffff;
@@ -27,10 +30,10 @@ body {
 
 @layer components {
   .cardIcon {
-     @apply transition-all duration-500 group-hover:text-gray-700 text-gray-300 !h-[60px] !w-[60px] rounded-lg
+     @apply transition-all duration-500 group-hover:text-gray-700 text-gray-300 !h-[30px] !w-[30px] rounded-lg
   }
   .barCard {
-    @apply flex items-center gap-6 text-[15px] w-full bg-gray-100 transition-all duration-500 hover:bg-gray-200 rounded-lg p-3
+    @apply flex items-center gap-6 text-[15px] w-full pl-8 transition-all duration-500 hover:bg-gray-200 rounded-lg p-2
   }
   
 }
