--- a/app/globals.css
+++ b/app/globals.css
@@ -28,12 +28,40 @@ body {
   font-family: poppins, sans-serif;
 }
 
+.DisableScrollBar {
+  scroll-behavior: smooth;
+  overflow: auto; /* or scroll */
+}
+
+.DisableScrollBar::-webkit-scrollbar {
+  width: 8px; 
+  height: 8px;
+}
+
+.DisableScrollBar::-webkit-scrollbar-track {
+  background: transparent; 
+}
+
+/* Keep the thumb visible */
+.DisableScrollBar::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.4); 
+  border-radius: 4px;
+}
+
+
+
 @layer components {
   .cardIcon {
      @apply transition-all duration-500 group-hover:text-gray-700 text-gray-300 !h-[30px] !w-[30px] rounded-lg
   }
   .barCard {
     @apply flex items-center gap-6 text-[15px] w-full pl-8 transition-all duration-500 hover:bg-gray-200 rounded-lg p-2
+  }
+  .skeletonModalImageContainer {
+    @apply relative w-full h-[400px]
+  }
+  .skeletonModal {
+    @apply flex flex-col gap-4
   }
   
 }
