--- a/app/globals.css
+++ b/app/globals.css
@@ -58,10 +58,10 @@ body {
     @apply flex items-center gap-6 text-[15px] w-full pl-8 transition-all duration-500 hover:bg-gray-200 rounded-lg p-2
   }
   .skeletonModalImageContainer {
-    @apply relative w-full h-[300px]
+    @apply relative w-full sm:w-[350px] h-[300px] sm:h-[200px]
   }
   .skeletonModal {
-    @apply flex flex-col sm:flex-row justify-center gap-4 w-full
+    @apply flex flex-col sm:flex-row justify-center gap-4 w-full bg-white
   }
-  
+
 }
